# finance_data_platform

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
airflow/: Dockerfile  requirements.txt
airflow/dags/: macro_fred.py  price_1d.py
alembic/: env.py
alembic/versions/: 252ffb161d09_waterfalls.py  7a3f1d9c2b44_macro_series.py  b1c4e7f29a3d_ingestion_runs.py  c97f926a8170_init.py  d4a6c1f7e2b9_fundamentals.py  f7c2b8e4a1d3_instrument_figi.py
docs/: PLAN.md  RULES.md  STRUCTURE.md  task.md
docs/dataflow/: structure.md
src/: main.py
src/api/: schemas.py
src/api/routers/: fundamentals.py  instruments.py  prices.py
src/core/: bucket_utils.py  config.py  constants.py  database.py  exceptions.py  logger.py
src/data/crud/: fundamentals.py  ingestion_run.py  ingestion_watermark.py  instrument_figi.py  macro_series.py  priced_1d.py  prices_1d.py  universal_instruments.py
src/data/models/: __init__.py  fundamentals.py  ingestion_run.py  ingestion_runs.py  ingestion_watermark.py  instrument_figi.py  macro_series.py  prices_1d.py  universal_instruments.py
src/ingestion/clients/: fred_client.py  openfigi_client.py  sec_edgar_client.py  yahoo_client.py
src/notebooks/: exploration.ipynb  silver.ipynb
tests/unit/: test_api.py  test_backfill_prices.py  test_clean_fred.py  test_clean_openfigi.py  test_clean_sec.py  test_clean_yf.py  test_config.py  test_ingestion_run.py  test_logger.py  test_quality_checks.py  test_returns.py  test_run_register_ticker.py
(+25 files in other folders)
