[project]
name = "finance-data-platform"
version = "0.1.0"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py312"
exclude = [".venv", "src/notebooks"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports/vars, undefined names...)
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear (common bug patterns)
]
ignore = [
    "E501", # line length is handled by the formatter, not worth failing CI over
    "E712", # `Column == True` is required SQLAlchemy filter syntax, not a Python truthiness check
]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*" = ["E501"]
"alembic/env.py" = ["F401", "E402"]  # config/logging must be set up before importing models

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
